--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 *{
     margin: 0;
     padding: 0;
-    font-family:'Poppins', sans-serif;;
+    font-family:'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(banner.png);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(z\,s\ patel.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -20,7 +21,7 @@ nav{
     align-items: center;
 }
 
-nav-img{
+.nav-img{
     width: 150px;
 }
 
@@ -69,8 +70,9 @@ nav-img{
 }
 .text-box p{
     color: #fff;
-    font-size: 9px;
+    font-size: 12px;
     margin: 10px 0 40px;
+
 }
 .hero-btn{
     display: inline-block;
@@ -81,6 +83,7 @@ nav-img{
     font-size: 13px;
     background: transparent;
     cursor: pointer;
+    border-radius: 15px;
 }
 .hero-btn:hover{
     border: 1px solid red;
@@ -115,11 +118,11 @@ p{
 .course-col{
     flex-basis: 31%;
     background: #fff3f3;
-    border-radius: 10px;
+    border-radius: 15px;
     margin-bottom: 5%;
     padding: 20px 12px;
     box-sizing: border-box;
-    transition: 0.5s;
+    transition: 0.4s;
 }
 h3{
     text-align: center;
@@ -127,7 +130,7 @@ h3{
     margin: 10px;
 }
 .course-col:hover{
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0,0.2);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0,0.9);
 }
 
 /*-------campus-------*/
@@ -144,6 +147,12 @@ h3{
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
+    border-radius: 30px;
+    box-sizing: border-box;
+    transition: 0.4s;
+}
+.campus-col:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0,5);
 }
 .campus-col img{
     width: 100%;
@@ -197,7 +206,6 @@ h3{
     color: #fff;
 }
 
-
 /*----------facilities-------*/
 
 .facilities{
@@ -211,10 +219,16 @@ h3{
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
+    border-radius: 30px;
+    box-sizing: border-box;
+    transition: 0.4s;
 }
 .facilities-col img{
     width: 100%;
     border-radius: 10px;
+}
+.facilities-col img:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0,0.90);
 }
 .facilities-col p{
     padding: 0;
@@ -226,15 +240,15 @@ h3{
 }
 
 
-/*--------testimonials-----*/
+/*-------student-----*/
 
-.testimonials{
+.student{
     width: 80%;
     margin: auto;
     padding-top: 100px;
     text-align: center;
 }
-.testimonials-col{
+.student-col{
     flex-basis: 44%;
     border-radius: 10px;
     margin-bottom: 5%;
@@ -243,21 +257,27 @@ h3{
     cursor: pointer;
     display: flex;
     padding: 25px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    transition: 0.4s;
 }
-.testimonials-col img{
+.student-col:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0,0.9);
+}
+.student-col img{
     height: 40px;
     margin-left: 5px;
     margin-right: 30px;
     border-radius: 50%;
 }
-.testimonials-col p{
+.student-col p{
     padding: 0;
 }
-.testimonials-col h3{
+.student-col h3{
     margin-top: 15px;
     text-align: left;
 }
-.testimonials-col .fa{
+.student-col .fa{
     color: #f44336;
 }
 
@@ -269,9 +289,14 @@ h3{
     background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(banner2.jpg);
     background-position: center;
     background-size: cover;
-    border-radius: 10px;
+    border-radius: 30px;
     text-align: center;
     padding: 100px 0;
+    box-sizing: border-box;
+    transition: 0.4s;
+}
+.cta:hover{
+    box-shadow: 0 0 20px 0px black
 }
 .cta h1{
     color: #fff;
