--- a/style.css
+++ b/style.css
@@ -315,11 +315,26 @@ h3{
     margin-top: 20px;
     font-weight: 600;
 }
-.icons .fa{
+.icons{
     color: #f44336;
-    margin: 0 13px;
+    font-size: 25px;
+}
+.icons .fa-brands{
+    color: #f44336;
+    margin: 5 5px;
     cursor: pointer;
     padding: 18px 0;
+}
+.footer p{
+    color: #000;
+}
+.footer p a{
+    color: #777;
+    text-decoration: none;
+}
+.footer p a:hover{
+    color: red;
+    border-bottom: 1px solid aqua;
 }
 
 
@@ -490,6 +505,26 @@ h3{
     font-weight: 400;
 }
 .contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+.fields div{
+    font: 20px;
+    margin-bottom: 5px;
+    color: #0000;
+    font-weight: 400;
+}
+.fields div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+.fields input, .fields textarea{
     width: 100%;
     padding: 15px;
     margin-bottom: 17px;
