--- a/css/stylee.css
+++ b/css/stylee.css
@@ -8,7 +8,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(z\,s\ patel.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(/img/z\,s\ patel.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -22,8 +22,10 @@ nav{
 }
 
 .nav-img{
-    width: 150px;
+    /* height: 150px; */
+    width: 200px;
 }
+
 
 .nav-links{
     flex: 1;
@@ -46,7 +48,7 @@ nav{
     content: '';
     width: 0%;
     height: 2px;
-    background: red;
+    background: #f6783a;
     display: block;
     margin: auto;
     transition: 0.8s;
@@ -54,6 +56,7 @@ nav{
 .nav-links ul li:hover::after{
     width: 100%;
 }
+
 
 .text-box{
     width: 90%x;
@@ -74,6 +77,7 @@ nav{
     margin: 10px 0 40px;
 
 }
+
 .hero-btn{
     display: inline-block;
     text-decoration: none;
@@ -86,17 +90,22 @@ nav{
     border-radius: 15px;
 }
 .hero-btn:hover{
-    border: 1px solid red;
-    background: red;
-    transition: 0.8s;
+    background:  #f6783a;
+    transition: 3s;
 }
-/*---course----*/
+
+nav .fa{
+    display: none;
+}
+
+
+/*----------------------- COURSE ------------------*/
 
 .course{
     width: 80%;
-margin: auto;
-text-align: center;
-padding-top: 100px;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
 }
 h1{
     font-size: 36px;
@@ -132,8 +141,44 @@ h3{
 .course-col:hover{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0,0.9);
 }
+.course-col img{
+    width: 200px;
+    border-radius: 50%; 
+} 
 
-/*-------campus-------*/
+/*-------------- -----------------*/
+/* .faculties{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+.team{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;   
+}
+
+.team-col{
+    flex-basis: 31%;
+    background: #fff3f3;
+    border-radius: 15px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.4s;
+}
+.team-col:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0,0.9);
+} */
+.post{
+    text-align: center;
+    color: orangered;
+    font-size: 15px;
+}
+
+
+/*--------------------------- CAMPUS -------*/
 
 .campus{
     width: 80%;
@@ -206,7 +251,9 @@ h3{
     color: #fff;
 }
 
-/*----------facilities-------*/
+
+
+/*--------------------- FACILITIES ------------------*/
 
 .facilities{
     width: 80%;
@@ -227,9 +274,9 @@ h3{
     width: 100%;
     border-radius: 10px;
 }
-.facilities-col img:hover{
+/* .facilities-col img:hover{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0,0.90);
-}
+} */
 .facilities-col p{
     padding: 0;
 }
@@ -240,7 +287,7 @@ h3{
 }
 
 
-/*-------student-----*/
+/*----------------- STUDENT ---------------*/
 
 .student{
     width: 80%;
@@ -281,7 +328,7 @@ h3{
     color: #f44336;
 }
 
-/*------ call to Action -------*/
+/*------------------ CALL TO ACTION ---------------------*/
 
 .cta{
     margin: 100px auto;
@@ -304,47 +351,68 @@ h3{
     padding: 0;
 }
 
-/*-------------footer-------*/
-.footer{
-    width: 100%;
-    text-align: center;
-    padding: 30px 0;
+/*------------------- FAST SECTION ------------------*/
+.fact-section {
+	background-position: center center;
+	position: relative;
 }
-.footer h4{
-    margin-bottom: 25px;
-    margin-top: 20px;
-    font-weight: 600;
+
+.fact-section:after {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background: #000;
+	opacity: 0.8;
 }
-.icons{
-    color: #f44336;
-    font-size: 25px;
+
+.fact-section .container {
+	position: relative;
+	z-index: 1;
 }
-.icons .fa-brands{
-    color: #f44336;
-    margin: 5 5px;
-    cursor: pointer;
-    padding: 18px 0;
+
+.fact {
+	text-align: center;
 }
-.footer p{
-    color: #000;
+
+.fact-icon {
+	font-size: 48px;
+	color: #fff;
+	width: 50px;
+	display: inline-block;
 }
-.footer p a{
-    color: #777;
-    text-decoration: none;
+
+.fact-text {
+	padding-left: 20px;
+	display: inline-block;
+	text-align: left;
 }
-.footer p a:hover{
-    color: red;
-    border-bottom: 1px solid aqua;
+
+.fact-text h2 {
+	color: #f6783a;
+	font-weight: 400;
+}
+
+.fact-text p {
+	margin-bottom: 0;
+	text-transform: uppercase;
+	color: #fff;
 }
 
 
 
-/*------------------- About Page -------------------*/
+
+
+
+
+/*------------------ ----------- --------  ABOUT PAGE ------------ --------------- ------------*/
 
 .sub-header{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(background.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(/img/background.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
@@ -389,7 +457,7 @@ h3{
     color:#fff ;
 }
 
-/*---------------- blog --------- */
+/*------------- --------------- ---------- BLOG ------------- ------------ --------- */
 
 .blog-content{
     width: 80%;
@@ -454,7 +522,7 @@ h3{
 }
 
 
-/*---------------- contact page ----------*/
+/*---------------- ------------- ---------- CONTACT PAGE ----------- ----------- ----------*/
 
 .location{
     width: 80%;
@@ -531,4 +599,221 @@ h3{
     outline: none;
     border: 1px solid #ccc;
     box-sizing: border-box;
+}
+
+/*----------------- POLICY -------------*/
+.header3{
+    min-height: 500px;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(/img/policy.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+.h1{
+    color: #fff;
+    text-align: center;
+    margin-top: 150px;
+}
+.h4{
+    color: #777;
+    text-align: center;
+    margin-top: 30px;
+}
+.p{
+    color: #555;
+    margin-left: 100px;
+}
+.h2{
+    color: #000;
+    margin-left: 100px;
+    font-weight: 500;
+}
+.p a{
+    text-decoration: none;
+    color: #555;
+}
+
+/*---------------- COPYRIGHT _--------------*/
+.header2{
+    min-height: 500px;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(/img/copyright2.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+.li{
+    margin-left: 100px;
+}
+/*---------------------
+	Footer Section
+-----------------------*/
+
+.footer-section {
+	background-color: #020031;
+	background-image: url("/img/footer-bg.png");
+	background-repeat: no-repeat;
+	background-position: center 75px;
+}
+
+.con{
+    color: #b7b7b7;
+    text-decoration: none;
+}
+.con:hover{
+    color: #f6783a;
+}
+#fafa{
+    color: #f6783a;
+    margin-right: 20px;
+}
+
+.footer-section .footer-top {
+	padding: 65px 15px;
+}
+
+.footer-section .copyright {
+	border-top: 1px solid #312f56;
+	padding: 27px 0;
+	text-align: center;
+}
+
+.footer-section .copyright p {
+	color: #b7b7b7;
+	margin-bottom: 0;
+}
+
+.footer-section .copyright p a {
+	color: #fff;
+	font-weight: 500;
+    text-decoration: none;
+}
+
+.footer-section .copyright p a:hover {
+	color: #f6783a;
+}
+
+.footer-widget .fw-title {
+	text-transform: uppercase;
+	color: #fff;
+	margin-bottom: 25px;
+	padding-top: 10px;
+}
+
+.footer-widget p,
+.footer-widget span {
+	color: #b7b7b7;
+}
+
+.footer-widget ul {
+	list-style: none;
+}
+
+.footer-widget .about-widget img {
+	margin-bottom: 30px;
+}
+
+.footer-widget .about-widget p {
+	margin-bottom: 35px;
+}
+
+.footer-widget .social a {
+	color: #b7b7b7;
+	margin-right: 15px;
+}
+
+.footer-widget .dobule-link ul {
+	display: inline-block;
+}
+
+.footer-widget .dobule-link ul a {
+	display: block;
+	font-size: 14px;
+	color: #b7b7b7;
+	margin-bottom: 15px;
+    text-decoration: none;
+}
+
+.footer-widget .dobule-link ul a:hover {
+	color: #f6783a;
+}
+
+.footer-widget .dobule-link ul li:last-child a {
+	margin-bottom: 0;
+}
+
+.footer-widget .dobule-link ul:last-child {
+	margin-left: 50px;
+}
+
+.footer-widget .recent-post li {
+	margin-bottom: 25px;
+}
+
+.footer-widget .recent-post p {
+	margin-bottom: 5px;
+}
+
+.footer-widget .recent-post span {
+	font-size: 12px;
+}
+
+.footer-widget .recent-post span i {
+	color: #f6783a;
+	margin-right: 5px;
+}
+
+.footer-widget .contact li {
+	margin-bottom: 15px;
+	display: block;
+}
+
+.footer-widget .contact li p {
+	margin-bottom: 0;
+}
+
+.footer-widget .contact i {
+	font-size: 12px;
+}
+
+
+
+
+
+
+@media(max-width: 700px){
+    .text-box h1{
+        font-size: 30px;
+    }
+    .nav-links ul li{
+        display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background-color: rgb(29, 29, 145);
+        height: 40vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 2s;
+        /* background: transparent; */
+    }
+    nav .fa{
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    .nav-links ul{
+        padding: 30px;
+    }
+
+    /*----- course ----*/
+    .row{
+        flex-direction: column;
+    }
 }
